--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 
 :root {
   --primary: #10ea47;
+  --primary-hover: #87F5A3;
   --white: #fff;
   --white-50: rgba(255, 255, 255, 0.5);
   --white-80: rgba(255, 255, 255, 0.8);
