--- a/src/components/InfoSection/InfoSection.scss
+++ b/src/components/InfoSection/InfoSection.scss
@@ -1,4 +1,5 @@
 .info {
+  width: 100%;
   height: 4rem;
   background-color: var(--primary);
   padding: 0.75rem;
@@ -7,13 +8,23 @@
   justify-content: space-between;
   gap: 1.5rem;
   overflow: hidden;
+  z-index: 2;
+  position: fixed;
   transition: var(--transition);
   align-items: center;
   &__text {
     width: 100%;
   }
+  &__btn-wrapper{
+    width: 7.5rem;
+    display: flex;
+    height: 100%;
+    flex-shrink: 0;
+      align-items: center;
+  }
   &__btn {
-    margin-inline-start: 2rem;
+    margin-inline-start: auto;
+    width: max-content;
     font-size: inherit;
     font-weight: var(--semibold);
     border-radius: var(--radius-full);
@@ -27,7 +38,6 @@
     position: relative;
     border: 1px solid var(--white);
     &:hover {
-      margin-inline-start: 0;
       padding: 0.375rem 0.5rem 0.375rem 0.75rem;
       gap: 0.25rem;
       background-color: var(--primary);
