--- a/src/components/NavPopup/NavPopup.scss
+++ b/src/components/NavPopup/NavPopup.scss
@@ -12,10 +12,11 @@
   margin: 0.75rem;
   background-color: var(--grey);
   gap: 1.5rem;
-
   &.open {
+    z-index: 1;
     transform: translateX(0);
     filter: blur(0);
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
   }
   &__links {
     display: grid;
@@ -30,6 +31,7 @@
     }
   }
   &__link {
+    transition: var(--transition);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -37,33 +39,18 @@
     color: var(--white-80);
     font-weight: var(--medium);
     position: relative;
+    & * {
+      transition: var(--transition);
+    }
     &:not(:last-child) {
       border-bottom: 1px solid var(--white-50);
-      &::before {
-        content: "";
-        width: 100%;
-        transform: translateX(-50%);
-        left: 50%;
-        background-color: transparent;
-        position: absolute;
-        bottom: -0.125rem;
-        border-radius: 100%;
-        filter: blur(0.25rem);
-        height: 0.25rem;
-        opacity: 0.5;
-      }
     }
     &:hover {
-      &::before {
-        background-color: var(--primary);
-      }
       color: var(--primary);
       border-color: var(--primary);
-      text-shadow: 0 0 0.15rem var(--primary);
       & svg path {
         stroke: var(--primary);
         stroke-opacity: 1;
-              filter: drop-shadow(0 0 0.05rem var(--primary));
       }
     }
   }
@@ -90,12 +77,7 @@
     max-width: 4rem;
     width: 100%;
     &:hover {
-      transform: translateY(-0.25rem);
       background-color: var(--primary);
-      box-shadow:  0 0 0.5rem var(--primary);
-      & *{
-        opacity: 0.8;
-      }
     }
   }
 }
