--- a/src/index.scss
+++ b/src/index.scss
@@ -36,6 +36,7 @@ html {
 
 body {
   font-family: "Inter", sans-serif;
+  font-size: 1.125rem;
   background-color: var(--black);
   color: var(--black);
   overflow: auto;
