Add Videos section

--- a/src/components/MusicPlayer/MusicPlayer.scss
+++ b/src/components/MusicPlayer/MusicPlayer.scss
@@ -1,9 +1,9 @@
 .music-player {
-    margin: 0 .75rem;
-    border-radius: 2rem;
-    padding: .75rem;
-    background-color: var(--grey);
-    text-align: center;
+  margin: 0 0.75rem;
+  border-radius: 2rem;
+  padding: 0.75rem;
+  background-color: var(--grey);
+  text-align: center;
   &__audio {
     display: none;
   }
@@ -23,15 +23,15 @@
   &__title {
     color: var(--white);
     margin-bottom: 1rem;
-}
-&__subtitle {
-        font-weight: var(--medium);
-      color: var(--white-80);
-      margin-bottom: 2rem;
+  }
+  &__subtitle {
+    font-weight: var(--medium);
+    color: var(--white-80);
+    margin-bottom: 2rem;
   }
   &__progress-panel {
     display: flex;
-    gap: .75rem;
+    gap: 0.75rem;
   }
   &__progress-track {
     width: 100%;
@@ -43,31 +43,30 @@
   &__progress-time {
     position: absolute;
     top: 50%;
-    left:50%;
-    transform: translate(-50%,-50%);
+    left: 50%;
+    transform: translate(-50%, -50%);
     color: var(--white-80);
-        font-weight: var(--medium);
-        mix-blend-mode: difference;
-    
+    font-weight: var(--medium);
+    mix-blend-mode: difference;
   }
   &__progress-bar {
     width: 4%;
-        transition: var(--transition);
+    transition: var(--transition);
     height: 100%;
-        border-radius: 0 var(--radius-full) var(--radius-full) 0;
-        background-color: var(--primary);
+    border-radius: 0 var(--radius-full) var(--radius-full) 0;
+    background-color: var(--primary);
   }
   &__play-btn {
     padding: 0 1.75rem;
     border-radius: var(--radius-full);
     background-color: var(--primary);
     font-size: 1rem;
-    border:none;
+    border: none;
     height: 2.75rem;
     font-weight: var(--medium);
     transition: var(--transition);
-    &:hover{
-        background-color: var(--primary-hover);
+    &:hover {
+      background-color: var(--primary-hover);
     }
   }
 }
