--- a/src/components/Videos/Videos.scss
+++ b/src/components/Videos/Videos.scss
@@ -42,6 +42,10 @@
     &__preview{
         background-color: var(--grey);
 aspect-ratio: 16/9;
+& iframe{
+width: 100%;
+height: 100%;
+}
     }
     &__content{
         display: flex;
