--- a/src/components/MusicPlayer/MusicPlayer.scss
+++ b/src/components/MusicPlayer/MusicPlayer.scss
@@ -16,6 +16,11 @@
     aspect-ratio: 1/1;
     background-color: var(--black);
     margin-bottom: 2rem;
+    overflow: hidden;
+  }
+  &__cover-image {
+    width: 100%;
+    height: 100%;
   }
   &__audio-panel {
     position: relative;
@@ -31,7 +36,7 @@
   }
   &__progress-panel {
     display: flex;
-    gap: 0.75rem;
+    gap: 0.5rem;
   }
   &__progress-track {
     width: 100%;
@@ -48,16 +53,18 @@
     color: var(--white-80);
     font-weight: var(--medium);
     mix-blend-mode: difference;
+    width: 100%;
   }
   &__progress-bar {
-    width: 4%;
-    transition: var(--transition);
+    transition: width 0.3s linear;
     height: 100%;
     border-radius: 0 var(--radius-full) var(--radius-full) 0;
     background-color: var(--primary);
   }
   &__play-btn {
-    padding: 0 1.75rem;
+    flex-shrink: 0;
+    padding: 0;
+    width: 5.5rem;
     border-radius: var(--radius-full);
     background-color: var(--primary);
     font-size: 1rem;
@@ -67,6 +74,12 @@
     transition: var(--transition);
     &:hover {
       background-color: var(--primary-hover);
+    }
+    &--temporary {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 2.75rem;
     }
   }
 }
