--- a/src/components/Videos/Videos.scss
+++ b/src/components/Videos/Videos.scss
@@ -32,53 +32,54 @@
     display: flex;
     align-items: center;
     padding: 0 0.125rem 0 1.75rem;
-    margin-bottom:4rem;
+    margin-bottom: 4rem;
   }
   &__list {
-    
   }
 }
 .video {
-    &__preview{
-        background-color: var(--grey);
-aspect-ratio: 16/9;
-& iframe{
-width: 100%;
-height: 100%;
-}
+  &__preview {
+    background-color: var(--grey);
+    aspect-ratio: 16/9;
+     height: 100%;
+    & iframe {
+      width: 100%;
+      height: 100%;
     }
-    &__content{
-        display: flex;
-padding: 1.5rem 1.5rem 1.5rem 0;
-    }
-    &__icon-wrapper{
-        width: 6.25rem;
-        flex-shrink: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    &__section{
-    
-    }
-&__title{
+  }
+  &__content {
+    display: flex;
+    padding: 3rem 1.5rem 3rem 0;
+  }
+  &__icon-wrapper {
+    width: 6.25rem;
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  &__section {
+  }
+  &__title {
     color: var(--white);
     margin-bottom: 1rem;
-}
-&__description{
-color: var(--white-80);
-position: relative;
-}
-&__element{
-    font-size: 4rem;
+  }
+  &__description {
+    color: var(--white-80);
+    position: relative;
+  }
+  &__element {
+    font-size: 8rem;
+    z-index: -1;
     position: absolute;
     color: var(--grey);
 
-    &--first{
-        top: -2rem;
-        left: -1rem;
+    &--first {
+      top: -3rem;
+      left: -2rem;
     }
-  &--last{}
-}
-
+    &--last {
+     top: calc(100% - 3rem);
+    }
+  }
 }
