--- a/src/components/MainHeader/MainHeader.scss
+++ b/src/components/MainHeader/MainHeader.scss
@@ -4,6 +4,26 @@
   width: 100%;
   position: fixed;
   padding: 0.75rem 0.75rem 0;
+   &::before{
+    transition: all 1s linear;
+      z-index: 0;
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100vw;
+      min-height: 100vh;
+      pointer-events: none;
+      background-color: rgba(0, 0, 0, 0);
+      backdrop-filter: blur(0);
+    }
+}
+
+body:has(.nav.open) .fixed{
+      &::before{
+      background-color: rgba(0, 0, 0, 0.01);
+      backdrop-filter: blur(1rem);
+    }
 }
 
 .main-header {
