--- a/src/components/Videos/Videos.scss
+++ b/src/components/Videos/Videos.scss
@@ -21,33 +21,39 @@
     text-align: center;
     padding: 0 1.5rem;
   }
-  &__buttons{
+  &__buttons {
     width: max-content;
-    margin: 0 auto 2rem auto ;
+    margin: 0 auto 2rem auto;
   }
 }
 .video {
   &__preview {
     background-color: var(--grey);
     aspect-ratio: 16/9;
-     height: 100%;
+    height: 100%;
     & iframe {
       width: 100%;
       height: 100%;
     }
   }
   &__content {
+    overflow: hidden;
     display: flex;
     padding: 3rem 1.5rem 3rem 0;
   }
-  &__icon-wrapper {
+  &__number {
     width: 6.25rem;
     flex-shrink: 0;
     display: flex;
     align-items: center;
+    line-height: 0.5rem;
     justify-content: center;
+    font-family: var(--font-secondary);
+    color: var(--primary);
+    font-size: 6.25rem;
   }
   &__title {
+    font-size: 1.4375rem;
     color: var(--white);
     margin-bottom: 1rem;
   }
@@ -56,16 +62,14 @@
     position: relative;
   }
   &__element {
-    font-size: 8rem;
-    z-index: -1;
-    position: absolute;
-    color: var(--grey);
+    font-family: var(--font-secondary);
+    color: var(--primary);
     &--first {
-      top: -3rem;
-      left: -2rem;
+      margin-left: -0.9375rem;
+      padding-right: 0.3125rem;
     }
     &--last {
-     top: calc(100% - 3rem);
+      padding-left: 0.3125rem;
     }
   }
 }
