--- a/src/components/ui/Button/Button.scss
+++ b/src/components/ui/Button/Button.scss
@@ -7,6 +7,8 @@
   justify-content: center;
   font-weight: var(--medium);
   transition: var(--transition);
+  font-size: inherit;
+  padding: 0 1.75rem;
   &--primary {
     border: none;
     background-color: var(--primary);
@@ -16,6 +18,7 @@
     }
   }
   &--secondary {
+    background-color: transparent;
     color: var(--white);
     border: 1px solid var(--white-50);
     &:hover {
@@ -39,12 +42,13 @@
   &.icon-left {
     padding: 0 1.75rem 0 0.125rem;
   }
-  &.icon-only{
-      height: 2.75rem;
-      width: 2.75rem;
-      &__text{
-        display: none;
-      }
+  &.icon-only {
+    padding: 0;
+    height: 2.75rem;
+    width: 2.75rem;
+    &__text {
+      display: none;
+    }
   }
   &.play {
     flex-shrink: 0;
@@ -52,5 +56,4 @@
     width: 5.5rem;
     font-size: 1rem;
   }
-
 }
