--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Sora:wght@100..800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Finger+Paint&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Sora:wght@100..800&display=swap');
 
 :root {
   --primary: #10ea47;
@@ -19,6 +19,10 @@
   --bold: 700;
 
   --transition: all 0.2s ease-out;
+
+  --font-body:   "Inter", sans-serif;
+  --font-primary: "Sora", sans-serif;
+  --font-secondary:   "Finger Paint", sans-serif;
 }
 
 html {
@@ -35,8 +39,8 @@ html {
 }
 
 body {
-  font-family: "Inter", sans-serif;
-  font-size: 1.125rem;
+  font-family: var(--font-body);
+  font-size: 1rem;
   background-color: var(--black);
   color: var(--black);
   overflow: auto;
@@ -51,7 +55,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Sora", sans-serif;
+  font-family: var(--font-primary);
 }
 
 button {
